--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,40 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-primary: #e43d30;
+  --color-secondary: #e43d80;
+  --color-accent: #00a1f1;
+  --color-background: #082b47;
+  --color-paragraph: #7b7b7b;
+  --font-inter: var(--font-inter);
+  --font-poppins: var(--font-poppins);
+  --color-dark-text: #33324a;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  .btn {
+    @apply py-3 px-6 flex font-medium border-2 border-transparent items-center cursor-pointer justify-center min-w-[150px] rounded-xl transition-colors duration-300;
+  }
+
+  .btn-primary {
+    @apply bg-primary text-white border-primary hover:border-secondary hover:bg-secondary;
+  }
+  .btn-secondary {
+    @apply text-background border-background hover:bg-background hover:text-white;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.custom-container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.linear-background-navbar {
+  background: linear-gradient(
+      0deg,
+      rgba(249, 249, 255, 0) 38.32%,
+      rgba(0, 161, 241, 0.5) 100.31%
+    ),
+    #f9f9ff;
 }
